# to-do-list

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/to_do_list/: .env  auth.py  create_db.py  database.py  main.py  models.py  runsserver.py  security.py  setting.py  settings.py
tests/: .env  conftest.py  test_api.py
tests/functional/: test_auth_flow.py  test_tasks_flow.py
tests/unit/: test_auth.py
